# Aegis_LoRA

./: .gitignore  cleanse.py  cli.py  crow_style_defense.py  detector.py  main.py  pv_monitor.py  readme.md  requirements.txt  run_aegis.py  start-cli.bat  start-gui.bat  style.css  test_cleansed_asr.py  test_raw_asr.py  threat_report.json  webUI.py
.cache/: sessions_history.json
.cache/.temp_immunization/: step1_variants.pkl
competition/: evaluator.py  parameter_microscope.py  run_demo_comparison.py  run_evaluator.py
core/: cleanse.py  detector.py
datasets/: clean_data.json  clean_data_recovery.json  clean_data_variants.json  deepseek_multidomain_signatures.pt  llama_multidomain_signatures.pt  qwen_multidomain_signatures.pt
datasets/spectral_features_cache/: padbench_20d_features.pkl
datasets/test_data/clean/code_injection/: test_data_no_trigger.json
datasets/test_data/poison/code_injection/badnet/: backdoor500_codeinject_badnet_v2.json
datasets/test_data/poison/code_injection/ctba/: backdoor500_codeinject_ctba_v2.json
datasets/test_data/poison/code_injection/sleeper/: backdoor500_codeinject_sleeper_v2.json
datasets/test_data/poison/code_injection/vpi/: backdoor500_codeinject_vpi_v2.json
launcher/: aegis.cmd  cli.py  connect.ps1  pyproject.toml  requirements.txt  start.ps1  webui.py
models/detectors/: spectral_detector_llama.pkl
reports/: threat_report.json  threat_report_healthy_lora.json  threat_report_poisoned_lora.json
scripts/: build_signature_bank.py  check.py  data_fetcher.py  reduce.py  run_demo_comparison.py  run_detector.py  run_evaluator.py  run_fast_purification.py  run_purification.py  scan_lora.py  style.css  train_detector.py  train_peftguard.py
utils/: api.py  api_jobs.py  api_server.py  cleanse.py  dataset_builder.py  delta_extractor.py  detector.py  evaluator.py  model_registry.py  pipeline.py  recovery.py  report_generator.py
utils/core/: cleanse.py  dataset_builder.py  delta_extractor.py  recovery.py  report_generator.py
