[project]
name = "aegis-lora-runtime"
version = "0.3.0"
description = "Locked runtime environment for Aegis-LoRA"
requires-python = ">=3.10,<3.11"
dependencies = [
    "httpx==0.28.1",
    "rich==14.2.0",
    "typer==0.24.1",
]

[project.optional-dependencies]
full = [
    "accelerate==1.13.0",
    "bitsandbytes==0.49.2",
    "datasets==4.8.3",
    "fastapi==0.136.1",
    "gradio==6.14.0",
    "huggingface-hub==1.7.1",
    "jieba==0.42.1",
    "matplotlib==3.10.9",
    "modelscope==1.35.0",
    "numpy==2.2.6",
    "pandas==2.3.3",
    "peft==0.18.1",
    "protobuf==6.31.1",
    "pydantic==2.13.3",
    "python-multipart==0.0.27",
    "rouge-chinese==1.0.3",
    "safetensors==0.7.0",
    "scikit-learn==1.7.2",
    "scipy==1.15.3",
    "sentencepiece==0.2.1",
    "tokenizers==0.22.2",
    "tqdm==4.67.3",
    "transformers==5.3.0",
    "trl==1.4.0",
    "uvicorn==0.46.0",
]
cpu = ["torch==2.10.0"]
cu130 = ["torch==2.10.0"]

[tool.uv]
package = false
conflicts = [
    [
        { extra = "cpu" },
        { extra = "cu130" },
    ],
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu130", extra = "cu130" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
